--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f978b0">  <td>22/06/08 10:40:06</td>   <td>0</td> <td title="&gt;&gt;WinVinayaAcadamyWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1422222071</td>   <td></td> </tr>
-<tr bgcolor="c386de">  <td>22/06/08 10:40:06</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaAcadamyBase.beforeMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1422222071</td>   <td></td> </tr>
-<tr bgcolor="93de87">  <td>22/06/08 10:40:06</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestUserLoadingTime.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">AcdemyLoginTest</td> 
-  <td>main@1422222071</td>   <td></td> </tr>
-<tr bgcolor="c386de">  <td>22/06/08 10:40:50</td>   <td>44000</td> <td title="&lt;&lt;WebTestWinVinayaAcadamyBase.afterMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1422222071</td>   <td></td> </tr>
-<tr bgcolor="f978b0">  <td>22/06/08 10:40:51</td>   <td>44857</td> <td title="&lt;&lt;WinVinayaAcadamyWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1422222071</td>   <td></td> </tr>
+<tr bgcolor="af9aae">  <td>22/07/16 12:17:10</td>   <td>0</td> <td title="&gt;&gt;WinVinayaAcadamyWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@57a78e3]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293677337</td>   <td></td> </tr>
+<tr bgcolor="8eba8e">  <td>22/07/16 12:17:10</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaAcadamyBase.beforeMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@57a78e3]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1293677337</td>   <td></td> </tr>
+<tr bgcolor="d9a273">  <td>22/07/16 12:17:10</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestUserLoadingTime.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@57a78e3]">AcdemyLoginTest</td> 
+  <td>main@1293677337</td>   <td></td> </tr>
+<tr bgcolor="8eba8e">  <td>22/07/16 12:20:46</td>   <td>215413</td> <td title="&lt;&lt;WebTestWinVinayaAcadamyBase.afterMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@57a78e3]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293677337</td>   <td></td> </tr>
+<tr bgcolor="af9aae">  <td>22/07/16 12:20:46</td>   <td>216116</td> <td title="&lt;&lt;WinVinayaAcadamyWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@57a78e3]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293677337</td>   <td></td> </tr>
 </table>
